<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.is_great.pro.coffeeshop.MainActivity">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:inputType="textCapWords"
            android:hint="@string/name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/title"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/plus_button"
                android:layout_height="wrap_content"
                android:layout_width="48dp"
                android:text="+"
                android:textAppearance="?android:textAppearanceLarge"
                android:onClick="increment"/>
            <TextView
                android:id="@+id/count_text_view"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="0"/>
            <Button
                android:id="@+id/minus_button"
                android:layout_height="wrap_content"
                android:layout_width="48dp"
                android:text="-"
                android:textAppearance="?android:textAppearanceLarge"
                android:onClick="decrement"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/topping"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp" >

               <CheckBox
                   android:id="@+id/topping_type_1_check_box"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/topping_type_1"
                   android:paddingLeft="24dp"
                   android:textAppearance="?android:textAppearanceMedium"
                   />

                   <CheckBox
                       android:id="@+id/topping_type_2_check_box"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/topping_type_2"
                       android:paddingLeft="24dp"
                       android:textAppearance="?android:textAppearanceMedium"
                       />

                   <CheckBox
                       android:id="@+id/topping_type_3_check_box"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/topping_type_3"
                       android:paddingLeft="24dp"
                       android:textAppearance="?android:textAppearanceMedium"
                       />
           </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/price"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/price_text_view"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="$ 0.00"/>
        <Button
            android:id="@+id/book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order"
            android:textAllCaps="true"
            android:layout_marginLeft="20dp"
            android:onClick="submitOrder"/>

    </LinearLayout>
</ScrollView>